[gd_scene load_steps=13 format=3 uid="uid://ml4ov8nb7pyc"]

[ext_resource type="Script" path="res://flying_enemy.gd" id="1_ieg61"]
[ext_resource type="AudioStream" uid="uid://bo6naxd5tl8pv" path="res://SOunds/Drones1.wav" id="2_g41af"]
[ext_resource type="AudioStream" uid="uid://vxy0i6u5wjjl" path="res://SOunds/Drones2.wav" id="3_cr6ye"]
[ext_resource type="Texture2D" uid="uid://clyji42w5ujqx" path="res://ImagesForGame/Drone1.PNG" id="4_de2x5"]
[ext_resource type="Texture2D" uid="uid://bec2re6xk0euc" path="res://ImagesForGame/Drone2.PNG" id="5_tyq7y"]
[ext_resource type="Texture2D" uid="uid://bycaylrp2s3wu" path="res://ImagesForGame/Drone3.PNG" id="6_ic1dr"]
[ext_resource type="Texture2D" uid="uid://cmiy1mi0m81v7" path="res://ImagesForGame/Drone.PNG" id="7_6xdhh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s0r04"]
radius = 15.5672
height = 72.4429

[sub_resource type="CircleShape2D" id="CircleShape2D_ycqja"]
radius = 1858.03

[sub_resource type="Gradient" id="Gradient_2eboj"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ju3ao"]
gradient = SubResource("Gradient_2eboj")
fill_from = Vector2(0.486239, 1)
fill_to = Vector2(0.495413, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_4obqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_de2x5")
}, {
"duration": 1.0,
"texture": ExtResource("5_tyq7y")
}, {
"duration": 1.0,
"texture": ExtResource("6_ic1dr")
}, {
"duration": 1.0,
"texture": ExtResource("7_6xdhh")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Flying_enemy2" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_ieg61")

[node name="Area2D" type="Area2D" parent="."]
metadata/Spikes = true
metadata/Platform = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.55672, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s0r04")

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_ycqja")

[node name="WE\'RE_Drones1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_g41af")
volume_db = 10.0
autoplay = true
max_distance = 500.0
panning_strength = 3.0

[node name="WE\'RE_Drones2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cr6ye")
volume_db = 10.0
autoplay = true
max_distance = 500.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(1.55672, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s0r04")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-23.5, 13)
rotation = -0.0721748
scale = Vector2(0.296875, 0.4375)
texture = SubResource("GradientTexture2D_ju3ao")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(26.5, 13)
rotation = -0.0133156
scale = Vector2(0.296875, 0.4375)
texture = SubResource("GradientTexture2D_ju3ao")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.625025, -4.49998)
scale = Vector2(0.0265821, 0.0270161)
sprite_frames = SubResource("SpriteFrames_4obqf")
autoplay = "default"

[connection signal="area_entered" from="Area2D" to="." method="_death"]
[connection signal="area_entered" from="Detection" to="." method="_on_detection_area_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
